--- a/taoProctoring/locales/ru-RU/messages.po
+++ b/taoProctoring/locales/ru-RU/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TAO 3.4.0-sprint122\n"
-"PO-Revision-Date: 2020-02-28T12:48:15\n"
+"Project-Id-Version: TAO 3.4.0-sprint125\n"
+"PO-Revision-Date: 2020-03-27T10:59:11\n"
 "Last-Translator: TAO Translation Team <translation@tao.lu>\n"
 "MIME-Version: 1.0\n"
 "Language: ru-RU\n"
@@ -155,6 +155,9 @@ msgstr "Попытки"
 msgid "author"
 msgstr "автор"
 
+msgid "Authorization status"
+msgstr ""
+
 msgid "Authorize"
 msgstr "Предоставить полномочия"
 
@@ -224,11 +227,11 @@ msgstr "Отмена"
 msgid "cancel the action"
 msgstr "отмена действия"
 
-msgid "canceled"
-msgstr "отменено"
-
 msgid "Canceled"
 msgstr "Отменено"
+
+msgid "canceled"
+msgstr "отменено"
 
 msgid "Cannot authorize test session."
 msgstr "Невозможно предоставить полномочия по сеансу тестирования."
@@ -287,11 +290,11 @@ msgstr "комментарий"
 msgid "Complaint"
 msgstr "Жалоба"
 
-msgid "Completed"
-msgstr "Завершено"
-
 msgid "completed"
 msgstr "завершено"
+
+msgid "Completed"
+msgstr "Завершено"
 
 msgid "Completed tests"
 msgstr "Завершенные тесты"
@@ -320,11 +323,11 @@ msgstr "Текущее оценивание"
 msgid "Current sessions"
 msgstr "Текущие сеансы"
 
-msgid "Date"
-msgstr "Дата"
-
 msgid "date"
 msgstr "дата"
+
+msgid "Date"
+msgstr "Дата"
 
 msgid "Days"
 msgstr "Дни"
@@ -405,11 +408,11 @@ msgstr "Фильтр"
 msgid "Filter by the selected dates"
 msgstr "Фильтровать по выбранным датам"
 
-msgid "finished"
-msgstr "завершено"
-
 msgid "Finished"
 msgstr "Завершено"
+
+msgid "finished"
+msgstr "завершено"
 
 msgid "First name"
 msgstr "Имя"
@@ -725,11 +728,11 @@ msgstr "Протокол оценивания"
 msgid "section"
 msgstr "раздел"
 
-msgid "Session"
-msgstr "Сеанс"
-
 msgid "session"
 msgstr ""
+
+msgid "Session"
+msgstr "Сеанс"
 
 msgid "Session %s - %s has not been processed"
 msgstr "Сеанс %s — %s не был обработан"
@@ -740,11 +743,11 @@ msgstr "История сеансов"
 msgid "Session time handling"
 msgstr "Обработка времени сеанса"
 
-msgid "sessions"
-msgstr ""
-
 msgid "Sessions"
 msgstr "Сеансы"
+
+msgid "sessions"
+msgstr ""
 
 msgid "Sessions authorized"
 msgstr "По сеансам предоставлены полномочия"
@@ -830,10 +833,10 @@ msgstr "Прекратить"
 msgid "Terminate and irregularity"
 msgstr "Прекращение и нестандартная ситуация"
 
-msgid "Terminate session"
+msgid "Terminate Session"
 msgstr "Прекратить сеанс"
 
-msgid "Terminate Session"
+msgid "Terminate session"
 msgstr "Прекратить сеанс"
 
 msgid "Terminate sessions"
@@ -845,11 +848,11 @@ msgstr ""
 msgid "Terminate/Reactivate and irregularity"
 msgstr "Завершить/Реактивировать и нестандартная ситуация"
 
-msgid "Terminated"
-msgstr "Прекращено"
-
 msgid "terminated"
 msgstr "прекращено"
+
+msgid "Terminated"
+msgstr "Прекращено"
 
 msgid "Test  must be terminated."
 msgstr "Тест необходимо прекратить."
