Prepare button for being translate

--- a/taoQtiTest/locales/fr-FR/messages.po
+++ b/taoQtiTest/locales/fr-FR/messages.po
@@ -1469,3 +1469,6 @@ msgstr "Zoom arrière"
 
 msgid "Test Part Properties"
 msgstr "Propriétés des pièces d'essai"
+
+msgid "New section"
+msgstr ""
